--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>Judy Ho</h1>
 
 <p>This is my simple website.</p>
-
+<a href="http://www.github.com/dmil">Find me on Github!</a>
 
 </body>
 </html>
