I made some changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="app.css">
+</head>
 <body>
 
+<div class="first-section">
 <h1>Judy Ho</h1>
+<p>Hello, how are you?</p>
+<img src="./images/chart.png">
+</div>
+
+
+<div class="first-section">
+<h1>My teacher</h1>
+<p>I am doing fine</p>
+<img src="./images/chart.png">
+</div>
+
+
 
 <p>This is my simple website.</p>
 <a href="http://www.github.com/dmil">Find me on Github!</a>
